<resources>
    <!-- Spinners Array options -->
    <string-array name="event_access">
        <item>all</item>
        <item>private</item>
        <item>public</item>

    </string-array>
    <string-array name="event_categories">
        <item>all</item>
        <item>sales</item>
        <item>entertainment</item>

    </string-array>
    <string-array name="org_categories">
        <item>Australia</item>
        <item>Canada</item>
        <item>China</item>
        <item>India</item>
        <item>Sri Lanka</item>
        <item>United States</item>
    </string-array>
    <string-array name="org_filters">
        <item>Australia</item>
        <item>Canada</item>
        <item>China</item>
        <item>India</item>
        <item>Sri Lanka</item>
        <item>United States</item>
    </string-array>


    <string name="app_name">EventIt</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="first_name">First Name</string>
    <string name="last_name">last Name</string>
    <string name="email_address">Email Address</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create An Account</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="dialog_OK">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="menu_registered_events">private events</string>
    <string name="about_us">About Us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_password">Enter Password</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="no_sub_org">You haven\'t Subscribed to any Organizations</string>
    <string name="event_details">Event Details</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="unregister">unregister</string>
    <string name="event_description">Event Description</string>
    <string name="organization_name">Organization Name</string>
    <string name="event_address">Event Address</string>
</resources>
