<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bradj.eventit.ViewEventFragment">


    <ScrollView
        android:id="@+id/events_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_details"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="24sp"

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3">


                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text=""
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textSize="14sp"
                    />
                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text=""
                    android:layout_weight="1"
                    android:gravity="end"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"


                >


            <TextView
                android:id="@+id/txtDescTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/event_description"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/txtDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                 />
            <TextView
                android:id="@+id/txtOrgTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:title="@string/organization_name"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/txtOrg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                 />

            <TextView
                android:id="@+id/txtAddressTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:title="@string/event_address"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                 />


            </LinearLayout>
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3" >



            <Button
                android:id="@+id/btnRegister"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                android:backgroundTint="@color/colorOrange"
                />


            </android.support.v7.widget.LinearLayoutCompat>

        </LinearLayout>





    </ScrollView>


    
</FrameLayout>
